--- a/src/assets/scss/argon-design-system.scss
+++ b/src/assets/scss/argon-design-system.scss
@@ -11,6 +11,8 @@
 //
 // * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
+//@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 // Bootstrap Functions
 @import "bootstrap/functions";
 
@@ -25,6 +27,9 @@
 
 // Theme Core
 @import "theme/theme-pro";
+
+// Bootstrap rtl
+//@import "bootstrap-rtl/bootstrap";
 
 // Custom Variables
 @import "custom/styles";
