--- a/src/assets/scss/custom/_styles.scss
+++ b/src/assets/scss/custom/_styles.scss
@@ -82,3 +82,13 @@ body{
 .default-color {
   color: #172b4d
 }
+
+.selectUploadMethodButton{
+  width: 160px;
+  height: 100px;
+}
+
+.MuiStepLabel-label.MuiStepLabel-alternativeLabel {
+  margin-top: 2px !important;
+  text-align: center;
+}
