--- a/src/assets/scss/theme/buttons.scss
+++ b/src/assets/scss/theme/buttons.scss
@@ -48,10 +48,13 @@
   }
 
   .btn-inner--icon {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     position: relative;
     top: 2px;
   }
+  font-size: 1rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 // Fixes
