--- a/src/assets/scss/custom/_styles.scss
+++ b/src/assets/scss/custom/_styles.scss
@@ -29,7 +29,7 @@ body{
 }
 
 .wizard-card .tab-content {
-  min-height: 435px;
+  min-height: 300px;
   padding: 0px 20px 10px;
 }
 
@@ -91,4 +91,23 @@ body{
 .MuiStepLabel-label.MuiStepLabel-alternativeLabel {
   margin-top: 2px !important;
   text-align: center;
+}
+
+.card-inner-with-border {
+  border-radius: 1px;
+  border-color: #cad1d7;
+  border-width: 1px;
+  border-style: solid;
+
+}
+
+.chech-text {
+  padding-right: 5px;
+}
+
+.signature-canvas {
+  touch-action: none;
+  border: 1px solid;
+  width: 100%;
+  height: 150px;
 }
