--- a/src/assets/scss/custom/_styles.scss
+++ b/src/assets/scss/custom/_styles.scss
@@ -111,3 +111,10 @@ body{
   width: 100%;
   height: 150px;
 }
+
+.campaignStatInfoBox {
+  height: 125px;
+  padding-top: 20px;
+  vertical-align: middle;
+  text-align: center;
+}
